Added Base classes, Camera, Game Mode, Paddle etc

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/PlayGround.PlayGround
 EditorStartupMap=/Game/Maps/PlayGround.PlayGround
+GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_BBCGameMode.BP_BBCGameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
